# project-brief-agents

./: .env.example  .gitignore  README.md
agents/: README.md  main.py  pyproject.toml
agents/project_agents/: __init__.py  models.py  server.py  service.py
agents/project_agents/brief/: __init__.py  formatter.py
agents/project_agents/config/: __init__.py  settings.py
agents/project_agents/graphs/: __init__.py  checkpointing.py  nodes.py  state.py  workflow.py
agents/project_agents/intake/: __init__.py  analyzer.py  question_queue.py  tone.py
agents/project_agents/models/: __init__.py  brief.py
agents/project_agents/prompts/: __init__.py  brief_system.md  intake_system.md  loaders.py
agents/project_agents/utils/: __init__.py  context_window.py
agents/tests/: __init__.py  test_server.py  test_workflow.py
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  router.py
backend/app/api/routes/: briefs.py  health.py  uploads.py
backend/app/core/: config.py
backend/app/dependencies/: __init__.py  mongo.py
backend/app/models/: __init__.py  brief.py  document.py
backend/app/services/: __init__.py  agents_client.py  documents.py
backend/tests/: __init__.py  test_briefs.py  test_health.py  test_uploads.py
docs/: README.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  index.css
frontend/src/components/: BriefPreview.tsx  ChatComposer.tsx  ConversationHistory.tsx  UploadsPlaceholder.tsx
frontend/src/config/: api.ts
frontend/src/hooks/: useBriefWorkflow.ts
frontend/src/types/: brief.ts
infrastructure/: Dockerfile.agents  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml
