[project]
name = "project-brief-agents"
version = "0.1.0"
description = "LangGraph orchestration for Project Brief Agents"
authors = [
    {name = "Usman Malik",email = "malik_usman0185@hotmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "langchain (>=1.0.5,<2.0.0)",
    "langgraph (>=1.0.2,<2.0.0)",
    "langgraph-checkpoint-mongodb (>=0.2.1,<0.3.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"

