[tool.poetry]
name = "project-brief-agents"
version = "0.1.0"
description = "LangGraph orchestration for Project Brief Agents"
authors = ["Usman Malik <malik_usman0185@hotmail.com>"]
readme = "agents/README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^1.0.5"
langgraph = "^1.0.2"
langgraph-checkpoint-mongodb = "^0.2.1"
pydantic = "^2.12.4"
pydantic-settings = "^2.11.0"
python-dotenv = "^1.2.1"
fastapi = "^0.121.1"
uvicorn = "^0.38.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

