[project]
name = "project-brief-backend"
version = "0.1.0"
description = "FastAPI service for Project Brief Agents"
authors = [
    {name = "Usman Malik",email = "malik_usman0185@hotmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.121.1,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "motor (>=3.7.1,<4.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
httpx = "^0.28.1"

